add scanning feature
